# unity_sim

./: .gitattributes  .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
Assets/: packages.config
Assets/AmplifyShaderEditor/Plugins/Editor/Menu/: AmplifyShaderEditorWindow.cs
Assets/AmplifyShaderEditor/Plugins/Editor/Utils/: ASEPackageManagerHelper.cs
Assets/Simulation/FollowCamera/: FollowCamera.cs
Assets/Simulation/Kalman/: GPS.prefab  IMU.cs  IMU.prefab  Kalman.inputactions  Kalman.prefab  KalmanVehicle.cs
Assets/Simulation/Kalman/Materials/: body.mat  propulsion.mat  satel.mat  suspension.mat  wheels.mat
Assets/Simulation/Kalman/RealSense/: DepthShader.shader  RealSense.cs  RealSense.prefab
Assets/Simulation/ROSBridge/: ROS.cs
Assets/Simulation/ROSBridge/BuiltinInterfaces/: Time.cs
Assets/Simulation/ROSBridge/SensorMsgs/: Imu.cs  RegionOfInterest.cs
Assets/Simulation/ROSBridge/StdMsgs/: Header.cs
Assets/Simulation/RealSense/: DepthShader.shader  RealSense.cs  RealSense.prefab
Assets/Simulation/Scenes/: Testing.unity  URC.unity
Assets/Simulation/Scenes/Testing/: Skybox.mat
Assets/Simulation/Scenes/URC/: PostProcess.asset  ShaderGraph2.shadergraph  Skybox.mat  TerrainShader.shader
Assets/Simulation/Scenes/URC/Layers/: Gravel.terrainlayer  Rocky Sand.terrainlayer  Sandstone Hills.terrainlayer
Assets/Simulation/Scenes/URC/Rocks/: Aset_nature_rock_M_uk4uebx.fbx  Aset_nature_rock_S_veosbjk.fbx  Aset_rock_sandstone_S_uk5seau.fbx
Assets/Simulation/Scenes/URC/TerrainData/: Terrain_0_0_700ea3b6-f7ba-47bf-a53b-374022e41339.asset  Terrain_0_0_ec9c6c9e-5d65-4a68-a703-5913ef9c05ba.asset  Terrain_0_3_daaa71b9-5489-475f-a6d3-20c1f8c522fd.asset  Terrain_1_0_d9498781-2012-43a0-8c83-5130effa392f.asset  Terrain_1_2_7632d309-7d40-4d97-9385-ee9c0baa478e.asset  Terrain_2_2_58b5a866-f520-44fe-b197-ef802978199e.asset  (+3 more)
ProjectSettings/: ProjectSettings.asset
UserSettings/: EditorUserSettings.asset  Search.settings
launch/: with_rosbridge.launch.py
realsense-native-plugin/: .gitignore  CMakeLists.txt  main.cpp
realsense-native-plugin/libjpeg-turbo/lib64/cmake/libjpeg-turbo/: libjpeg-turboTargets-release.cmake
realsense-native-plugin/libjpeg-turbo/lib64/pkgconfig/: libjpeg.pc  libturbojpeg.pc
unity_project/unity_rs_publisher_plugin/: CMakeLists.txt  main.cpp
unity_project/unity_sim/: .gitignore  Assembly-CSharp.csproj  generate_aruco_textures.py  unity_sim.sln
unity_project/unity_sim/Assets/: DefaultVolumeProfile.asset  packages.config
unity_project/unity_sim/Assets/Settings/: URP-HighFidelity-Renderer.asset  URP-HighFidelity.asset  UniversalRenderPipelineGlobalSettings.asset
unity_project/unity_sim/Assets/Simulation/: InputActions.inputactions
unity_project/unity_sim/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity_project/unity_sim/UserSettings/: EditorUserSettings.asset
unity_project/unity_sim/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2023.dwlt
unity_rs_publisher/: CMakeLists.txt  package.xml
unity_rs_publisher/src/: main.cpp  unity_rs_publisher_node.cpp
unity_rs_publisher_msgs/: CMakeLists.txt  package.xml
unity_sim/: .gitignore  CMakeLists.txt  __init__.py  package.xml  setup.py
unity_sim/Assets/AmplifyShaderEditor/Plugins/Editor/Templates/: TemplateAdditionalDirectivesHelper.cs
unity_sim/Assets/AmplifyShaderEditor/Plugins/Editor/Utils/: ASEStartScreen.cs
unity_sim/Assets/AmplifyShaderEditor/Plugins/Editor/Version/: VersionInfo.cs
unity_sim/Assets/Settings/: URP-HighFidelity.asset
unity_sim/Assets/Simulation/FollowCamera/: FollowCamera.inputactions
unity_sim/Assets/Simulation/IMU/: IMU.cs
unity_sim/Assets/Simulation/Kalman/: kalman.fbx
unity_sim/Assets/Simulation/ROSBridge/SensorMsgs/: CompressedImage.cs
unity_sim/Assets/Simulation/RealSense/: DepthShader.shader  RealSense.cs  RealSense.prefab
unity_sim/Assets/Simulation/Scenes/: Testing.unity
unity_sim/Assets/Simulation/Scenes/Testing/: PostProcess.asset  White.mat
unity_sim/Assets/Simulation/Scenes/URC/: CubemapSkybox.mat  TerrainMaterial.mat
unity_sim/Assets/Simulation/Scenes/URC/Rocks/: Aset_nature_rock_S_ulebdjn.fbx  Aset_nature_rock_S_veosfhj.fbx  Aset_rock_sandstone_M_uk4seg3.fbx
unity_sim/Assets/Simulation/Scenes/URC/Rocks/Materials/: Aset_nature_rock_L_ulducap_LOD5.mat  Aset_nature_rock_M_uk4uebx_LOD5.mat  Aset_nature_rock_S_veosfhj_LOD5.mat  Aset_rock_sandstone_M_uk4seg3_LOD5.mat
unity_sim/Assets/Simulation/Scenes/URC/TerrainData/: Terrain_0_0_8f7953e3-7dc4-40e8-8fa4-706af55810b6.asset  Terrain_0_0_d0f0124c-b87b-46f7-b1e4-bc1daa5f2536.asset  Terrain_0_2_dc2917fc-8309-45d0-b4bd-e0d8da0a89b8.asset  Terrain_1_1_528651cf-939d-4594-af32-0bcdf45839e9.asset  Terrain_1_3_248a33e2-7458-44d8-ae2c-7f8528dc1125.asset  Terrain_2_0_7097daca-d41a-4cf1-9280-9b5029e50dbd.asset  Terrain_3_1_a569484e-6cb3-4488-bf49-07ed3d36338c.asset
unity_sim/ProjectSettings/: QualitySettings.asset
unity_sim/UserSettings/: EditorUserSettings.asset
unity_sim/launch/: unity_sim.launch.py
unity_sim/scripts/: unity_sim  unity_version
unity_sim/unity_sim/: __init__.py  unity_sim_node.py  unity_version_node.py  util.py
unity_tf_static_republisher/: CMakeLists.txt  package.xml
unity_tf_static_republisher/src/: unity_tf_static_republisher_node.cpp
(+242 files in other folders)
